# FastFingers

./: CMakeLists.txt  README.md
outside/glad/: CMakeLists.txt
outside/glad/include/glad/: glad.h  glad.hpp
outside/glad/src/: glad.c  glad.cpp
src/: CMakeLists.txt
src/Core/: Application.cpp  Application.hpp  CMakeLists.txt  Entry.cpp  Entry.hpp  Error.hpp  Game.hpp  Helper.cpp  Helper.hpp
src/Game/: CMakeLists.txt  main.cpp
